--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,43 @@
   <head>
     <title>EcDevBackend</title>
     <%= csrf_meta_tags %>
-
+    <%= stylesheet_link_tag    'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'https://code.jquery.com/jquery-3.2.1.min.js' %>
+    <%= javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
   </head>
 
   <body>
+<nav class="navbar navbar-default">
+  <%= link_to "EcDevBackend", home_path %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <%= link_to "Home", home_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Posts", posts_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "About", about_path %>
+      </li>
+    </ul>
+        <ul class="navbar-nav navbar-right">
+      <li class="nav-item">
+        <%= link_to "Create New Post", new_post_path %>
+      </li>
+     
+    </ul>
+  </div>
+</nav>
+<div class="container">
     <%= yield %>
+</div>
+    
   </body>
 </html>
